Added some functions to the program.
